@@ -3431,6 +3431,21 @@ xr-hyper,>>>
 >>>
 
 %%%%%%%%%%%%%%%%%%
+\Section{savetrees.sty}
+%%%%%%%%%%%%%%%%%%
+
+\<use package\><<<
+savetrees,>>>
+
+\<add to usepackage\><<<
+\def\:temp{savetrees}\ifx \@currname\:temp
+\:dontusepackage{savetrees}
+\fi
+>>>
+
+
+
+%%%%%%%%%%%%%%%%%%
 \Section{url.sty}
 %%%%%%%%%%%%%%%%%%
 
